# GOLCONDA

./: .buildinfo  README.md  adjust_alm.ipynb  environment.yml  golconda.adjustcls.html  golconda.adjustl1.html  golconda.decomposer.html  golconda.html  golconda.image.html  golconda.loadsimulation.html  golconda.moments.html  index.html  modules.html  overview.html  py-modindex.html  pyproject.toml  searchindex.js
.doctrees/: environment.pickle  golconda.adjustcls.doctree  golconda.adjustl1.doctree  golconda.decomposer.doctree  golconda.doctree  golconda.image.doctree  golconda.loadsimulation.doctree  golconda.moments.doctree  index.doctree  modules.doctree  overview.doctree
.github/workflows/: cd.yml  deploy-docs.yml
_modules/golconda/: adjustcls.html  adjustl1.html  decomposer.html  image.html  loadsimulation.html  moments.html
_sources/: golconda.decomposer.rst.txt  golconda.image.rst.txt  golconda.loadsimulation.rst.txt
docs/: conf.py  golconda.adjustcls.rst  golconda.moments.rst  golconda.rst  index.rst  modules.rst  overview.md
docs/_build/: .buildinfo  genindex.html  golconda.adjustcls.html  golconda.adjustl1.html  golconda.decomposer.html  golconda.html  golconda.image.html  (+9 more)
modules/: adjustcls.py  adjustl1.py  decomposer.py  generatemap.ipynb  loadsimulation.py
notebooks/: deconvolution.ipynb  flat_sky_map.ipynb  generate_fullsky_maps.ipynb  generatemap_flatsky_map.ipynb  plots_for_talks.ipynb  try_inpainting.ipynb
src/: adjustcls.py  adjustl1.py  decomposer.py
tests/: tests.ipynb
utils/: config.py  image.py  loadsimulation.py  moments.py
(+24 files in other folders)
